website/i18n/ru/docusaurus-plugin-content-docs/version-0.0.28/quickstart.md
---
title: "Быстрый старт для ИИ-агента"
sidebar_position: 2
description: "Начните использовать Engram через ИИ-агента. Загрузите память, выполните работу, а затем предложите сохранить долговечную память."
---

# Быстрый старт для ИИ-агента

## Одобрение в чате с ИИ

В чате с ИИ-агентом одобрение Engram является разговорным. Сначала агент показывает уточненные кандидаты `TYPE: ... | TEXT: ...`, а для правил также варианты Light/Balanced/Strict. Ответьте `yes`, чтобы сохранить именно эти кандидаты, `audit`, чтобы их исправить, или `cancel`, чтобы остановить процесс. После `yes` агент использует `engram save-session --force` с точно одобренными кандидатами. Прямые сохранения через CLI по-прежнему используют A/B/C, если только команда accept-all не была вызвана явно.


Используйте Engram в первую очередь через вашего агента. CLI-интерфейс существует, но лучший сценарий использования таков: попросите агента загрузить память, выполните работу, а затем предложите зафиксировать долговечную память, когда появится что-то полезное.

## Первое сообщение в новой сессии

Спросите:

```text
Используй Engram для этой задачи. Загрузи память для: <описание того, что мы делаем>.
```

Если установлены адаптеры слэш-команд:

```text
/engram load "<текущая задача>"
```

Агент должен лишь резюмировать связанные идентификаторы памяти (ID) и правила, а не вставлять файлы целиком.

Когда агенту требуется автономное руководство по использованию Engram, запустите:

```bash
engram llm
```

Это выведет упакованное руководство `llm.txt` и не потребует запуска `engram inject`.

## Рекомендуемый диалог настройки

Спросите агента:

```text
Инициализируй Engram для этого рабочего пространства, установи подходящий набор навыков (skillset) для этого агента и подскажи, какую команду мне использовать дальше.
```

Агент может запустить:

```bash
engram inject
engram help link
engram link <имя_агента>
```

Чтобы настроить этого же агента глобально, дабы новые рабочие пространства могли загружать глобальную память Engram без предварительного запуска `engram inject`:

```bash
engram link --global <имя_агента>
```

Для использования прямо в чате спросите:

```text
Установи поддержку слэш-команд, чтобы я мог использовать /engram прямо из этого агента.
```

## Ежедневный цикл работы

Начало:

```text
/engram load "текущая задача"
```

В процессе работы:

```text
/engram search "тема, которую я мог упустить"
```

Когда агент узнает важный долговечный факт:

```text
/engram save knowledge
```

Когда по итогам сессии появилось несколько полезных правил, фактов или рабочих процессов:

```text
/engram save-session
```

Короткая форма:

```text
/engram ss
```

Чтобы включить недавнюю историю чатов, к которой агент действительно имеет доступ:

```text
/engram save-session --query-level 3
```

`--query-level` должен быть положительным целым числом. Агент может использовать не больше указанного числа недавних сессий человек-агент, включая текущую, и не должен выдумывать недоступную историю.

Используйте флаг автоматического одобрения (accept-all) только тогда, когда вы действительно в этом уверены:

```text
/engram ss -f
```

Флаг `-f` означает, что человек явно одобряет сохранение каждого предложенного агентом кандидата. Агенты не должны добавлять его самостоятельно без прямого указания человека.

Чтобы обработать доступные недавние чаты и сразу одобрить все сгенерированные кандидаты:

```text
/engram ss -f last 50 sessions
```

Эта формулировка нормализуется в `engram save-session --query-level 50 --force`.

## Импорт существующих знаний

Для репозитория, в котором уже есть `AGENTS.md`, `CLAUDE.md`, правила Cursor, заметки или документация:

```text
/engram take-control --plan
/engram take-control --all
```

Используйте флаг `--plan` вначале, если хотите увидеть выбранные файлы, пропущенные файлы, оценки токенов и предполагаемые типы памяти.

## Глобальная память

Используйте глобальную память для настроек, которые должны следовать за вами во всех репозиториях:

```text
Настрой глобальную память Engram по пути <путь>, затем сохрани это предпочтение глобально:
Используй pnpm для управления пакетами.
```

Агент может использовать:

```bash
engram inject --global-only --global-path <путь>
engram save --scope global "Используйте pnpm для управления пакетами."
engram link --global <имя_агента>
```

Когда inject видит настроенную глобальную память, он создает или выбирает пользовательский профиль по умолчанию для этого глобального корня, чтобы будущие рабочие пространства могли использовать его повторно.

## Поддержание здоровья памяти

В конце любой значимой работы спросите агента:

```text
Проверь состояние здоровья Engram, сообщи о невалидных записях памяти и предложи все, что стоит сохранить по итогам этой сессии.
```

Полезные команды:

```bash
engram upgrade
engram upgrade --plan
engram verify
engram repair
engram graph "<тема>"
engram quality-check
engram archive --reason "<причина>" <id или файл>
```

Далее: [Протокол памяти, контролируемый человеком](concepts/write-path.md).

<!-- evidence-foundation:v3:start -->
## Память, подкреплённая доказательствами

New files use `schema_version: 3`. Rule and skill memories default to `authority: instruction`; knowledge defaults to `authority: reference`. `revision` starts at 1 and increments on updates. Trace IDs belong in `evidence_refs`, while session or source identities belong in `derived_from`. Legacy v1 (`Context` + `Content` + `Example`) and v2 (`Content`, optional `Origin`) remain readable. Traces live in `.agents/.engram/traces/` with `traces/<trace-id>.jsonl` files recording `engram observe --file` and `save-session --file` provenance, `trust_level`, `sensitivity`, and `retention`.
<!-- evidence-foundation:v3:end -->
